--- a/webgpu1.html
+++ b/webgpu1.html
@@ -45,7 +45,7 @@ context      = canvas.getContext('webgpu');
       WebGPU very simple<br/>
       Color background<br/>
       <canvas width="120" height="120" class="green">
-         <script src="./webgpu1/webgpuSimple.js"></script>
+         <script src="./webgpu1/simple.js"></script>
       </canvas>
    </div>
    <div class="sample">
@@ -59,7 +59,7 @@ context      = canvas.getContext('webgpu');
       WebGPU triangle:<br/>
       Multiple Buffers<br/>
       <canvas width="160" height="120">
-         <script src="./webgpu1/webgpuMultipleBuffers.js" defer=""></script>
+         <script src="./webgpu1/multipleBuffers.js" defer=""></script>
       </canvas>
    </div><br/>
    <div class="sample">
@@ -68,7 +68,7 @@ context      = canvas.getContext('webgpu');
       Try Classes:<br/>
       html/script shaders<br/>
       <canvas width="160" height="120">
-        <script src="./webgpu1/webgpuTryClasses.js" defer=""></script>
+        <script src="./webgpu1/tryClasses.js" defer=""></script>
         <script type="text/wgsl-shader" data-gpu-type="webgpu-shader">
             struct VertexOut
             {
@@ -97,7 +97,7 @@ context      = canvas.getContext('webgpu');
       Try Classes2:<br/>
       html/script shaders<br/>
       <canvas width="160" height="120">
-        <script src="./webgpu1/webgpuTryClasses2.js" defer=""></script>
+        <script src="./webgpu1/tryClasses2.js" defer=""></script>
         <script type="text/wgsl-shader" data-gpu-type="webgpu-shader">
             struct VertexOut
             {
@@ -142,7 +142,7 @@ context      = canvas.getContext('webgpu');
                return vec4f(0.0, 0.0, 0.0, 0.1);
             }
         </script>
-         <script src="./webgpu1/webgpuSimpleDraw.js"></script>
+         <script src="./webgpu1/simpleDraw.js"></script>
       </canvas>
    </div>
    <div class="sample">
@@ -166,7 +166,7 @@ context      = canvas.getContext('webgpu');
                return vec4f(1.0, 0.0, 1.0, 0.5);
             }
          </script>
-         <script src="./webgpu1/webgpuSimpleDrawIndexed.js"></script>
+         <script src="./webgpu1/simpleDrawIndexed.js"></script>
       </canvas>
    </div>
    <div class="sample">
@@ -190,7 +190,7 @@ context      = canvas.getContext('webgpu');
                return vec4f(0.0, 1.0, 0.0, 1.0);
             }
          </script>
-         <script src="./webgpu1/webgpuTranslate.js"></script>
+         <script src="./webgpu1/translate.js"></script>
       </canvas>
    </div><br/>
    <!-- Go big for screen snippets -->
@@ -259,7 +259,7 @@ context      = canvas.getContext('webgpu');
       WebGPU Normals:<br/>
       Multiple Buffers<br/>
       <canvas id = "normals" width = "120" height = "120"  class="yellow">
-         <script src="./webgpu1/webgpuNormals.js"></script>
+         <script src="./webgpu1/normals.js"></script>
          <script type="text/wgsl-shader" data-gpu-type="webgpu-shader">
             struct VertexOut
             {
@@ -289,7 +289,7 @@ context      = canvas.getContext('webgpu');
       WebGPU: Colors R+G:<br/>
       Strided<br/>
       <canvas id="usecolors" width="120" height="120"  class="yellow">
-          <script src="./webgpu1/webgpuUsecolors.js"></script>
+          <script src="./webgpu1/usecolors.js"></script>
           <script type="text/wgsl-shader" data-gpu-type="webgpu-shader">
             struct VertexOut
             {
@@ -318,7 +318,7 @@ context      = canvas.getContext('webgpu');
       Cone TRIANGLE_FAN<br/>
       (wrong, ab glow effect)</br>
       <canvas id = "cone" width = "200" height = "200"  class="yellow">
-         <script src="./webgpu1/webgpuTriangleFan.js"></script>
+         <script src="./webgpu1/triangleFan.js"></script>
          <script type="text/wgsl-shader" data-gpu-type="webgpu-shader">
             struct VertexOut
             {
@@ -374,7 +374,7 @@ context      = canvas.getContext('webgpu');
       Cone TRIANGLE_FAN 2<br/>
       (wrong, ab glow effect)</br>
       <canvas id = "cone" width = "200" height = "200"  class="yellow">
-         <script src="./webgpu1/webgpuTriangleFan2.js"></script>
+         <script src="./webgpu1/triangleFan2.js"></script>
          <script type="text/wgsl-shader" data-gpu-type="webgpu-shader">
             struct VertexOut
             {
@@ -473,7 +473,7 @@ context      = canvas.getContext('webgpu');
       Smooth, </br>
       Verts as normals<br/>
       <canvas id = "cone1" width = "200" height = "200"  class="yellow">
-         <script src="./webgpu1/webgpuCone1Geometry1.js"></script>
+         <script src="./webgpu1/cone1Geometry1.js"></script>
          <script type="text/wgsl-shader" data-gpu-type="webgpu-shader">
             struct VertexOut
             {
@@ -504,7 +504,7 @@ context      = canvas.getContext('webgpu');
       Cone 1 geometry 2, </br>
       cross normals<br/>
       <canvas id = "cone1_geometry" width = "200" height = "200"  class="yellow">
-         <script src="./webgpu1/webgpuCone1Geometry2.js"></script>
+         <script src="./webgpu1/cone1Geometry2.js"></script>
          <script type="text/wgsl-shader" data-gpu-type="webgpu-shader">
             struct VertexOut
             {
@@ -535,7 +535,7 @@ context      = canvas.getContext('webgpu');
       Cone 1 geometry 3</br>
       Geometry borrow normals<br/>
       <canvas id = "cone1_geometry" width = "200" height = "200"  class="yellow">
-         <script src="./webgpu1/webgpuCone1Geometry3.js"></script>
+         <script src="./webgpu1/cone1Geometry3.js"></script>
          <script type="text/wgsl-shader" data-gpu-type="webgpu-shader">
             struct VertexOut
             {
@@ -566,7 +566,7 @@ context      = canvas.getContext('webgpu');
       Hearth Cone, </br>
       Geometry left (cross) <br/>
       <canvas id = "cone1 heart geometry" width = "200" height = "200"  class="yellow">
-         <script src="./webgpu1/webgpuCone1HeartGeometry.js"></script>
+         <script src="./webgpu1/cone1HeartGeometry.js"></script>
          <script type="text/wgsl-shader" data-gpu-type="webgpu-shader">
             struct VertexOut
             {
@@ -597,7 +597,7 @@ context      = canvas.getContext('webgpu');
       Hearth Cone Triangles, </br>
       Geometry, gradient<br/>
       <canvas id = "cone1 heart geometry" width = "400" height = "400"  class="yellow">
-         <script src="./webgpu1/webgpuCone1HeartGeometry2.js"></script>
+         <script src="./webgpu1/cone1HeartGeometry2.js"></script>
          <script type="text/wgsl-shader" data-gpu-type="webgpu-shader">
             struct VertexOut
             {
