--- a/draw.simple.1.glsl300.html
+++ b/draw.simple.1.glsl300.html
@@ -191,35 +191,33 @@
       </canvas>
    </div><br/>
    <div class="sample">
-      <br/>
       Cone TRIANGLE_FAN<br/>
-      (wrong)</br>
+      Wrong but correct<br/>
+      Four geonetries<br/>
       <canvas id = "cone" width = "200" height = "200"  class="yellow">
          <script src="./draw.simple.1.glsl300/triangle_fan.js"></script>
-         <script  type="text/glsl-shader" data-gl-type="vertex-shader">
+         <script type="text/glsl-shader" data-gl-type="vertex-shader">
             #version 300 es
-            layout (location = 0) in vec4 coordinates;
-            layout (location = 1) in vec3 inputNormal;
-			
-            out vec3 normal;
-            void main()
+            layout (location = 0) in vec3 vertex;
+            layout (location = 1) in vec3 normal;
+            out vec3 normalVary;
+            void main(void)
             {
-               gl_Position = coordinates;
-               normal = inputNormal;
+               gl_Position = vec4(vertex, 1);
+               normalVary = normal;
             }
          </script>
          <script type="text/glsl-shader" data-gl-type="fragment-shader">
             #version 300 es
             precision mediump float;
             out vec4 fragColor;
-
-            in vec3 normal; //always [0, 1, 1], excepting the tip [0.0, 0.0, 1.0]
-
-            const vec3 lightdirection    = vec3 (0.0, -1.0, 0.0); //directed in perpendicularly down
-            const vec4 dotlightdirection = vec4 (-lightdirection, 1); //for multiplication
+            in  vec3 normalVary;
+            const vec4 constColor = vec4 (0.0, 1.0, 0.0, 0.1);
+            const vec3 constLightDirection = vec3(0.0, 1.2, 0.0);
             void main()
             {
-              fragColor = dotlightdirection * vec4(normal, 0.9);
+               float prod = -dot (constLightDirection,  normalVary );
+               fragColor = vec4 (constColor.rgb * prod,  1.0);
             }
          </script>
       </canvas>
