Cone animation, code consolidation

--- a/draw.simple.1.glsl300.html
+++ b/draw.simple.1.glsl300.html
@@ -231,35 +231,26 @@
          <script src="./draw.simple.1.glsl300/cone1_animate.js"></script>
          <script  type="text/glsl-shader" data-gl-type="vertex-shader">
             #version 300 es
-            in vec4 coordinates;
-            in vec3 inputNormal;
-            uniform vec2  lightDirection; // Direction -> right up forward
-
-            out vec2 ld;
-            out vec3 nm;
-            void main()
+            layout (location = 0) in vec3 vertex;
+            layout (location = 1) in vec3 normal;
+            out vec3 normalVary;
+            void main(void)
             {
-               gl_Position = coordinates;
-               ld  = lightDirection;
-               nm = inputNormal;
+               gl_Position = vec4(vertex, 1);
+               normalVary = normal;
             }
          </script>
          <script type="text/glsl-shader" data-gl-type="fragment-shader">
             #version 300 es
             precision mediump float;
-            //precision lowp float;
-            //precision highp float;
-
             out vec4 fragColor;
-
-            const vec3  greenColor = vec3(0.0,  1.0,  0.0);
-
-            in vec2 ld;
-            in vec3 nm;
-            void main()
+            const vec4 constColor = vec4 (0.0, 1.0, 0.0, 1.0);
+            in  vec3 normalVary;
+            uniform vec3 lightDirection;
+            void main(void)
             {
-               float prod   =  -dot ( normalize(vec3(ld, -1.0)),   normalize(nm));
-               fragColor = vec4 (greenColor * prod,  1.0);
+               float prod = -dot (normalize(lightDirection),  normalize(normalVary) );
+               fragColor = vec4 (constColor.rgb * prod,  1.0);
             }
          </script>
       </canvas>
@@ -273,33 +264,55 @@
          <script src="./draw.simple.1.glsl300/cone1_animate2.js"></script>
          <script  type="text/glsl-shader" data-gl-type="vertex-shader">
             #version 300 es
-            in vec4 coordinates;
-            in vec3 inputNormal;
-            uniform vec2  lightDirection; // Direction -> changing
-
-            out vec2 ld;
-            out vec3 nm;
-            void main()
+            layout (location = 0) in vec3 vertex;
+            layout (location = 1) in vec3 normal;
+            out vec3 normalVary;
+            void main(void)
             {
-               gl_Position = coordinates;
-               ld  = lightDirection;
-               nm = inputNormal;
+               gl_Position = vec4(vertex, 1);
+               normalVary = normal;
             }
+
+            //#version 300 es
+            //in vec4 coordinates;
+            //in vec3 inputNormal;
+            //uniform vec2  lightDirection; // Direction -> changing
+//
+            //out vec2 ld;
+            //out vec3 nm;
+            //void main()
+            //{
+            //   gl_Position = coordinates;
+            //   ld  = lightDirection;
+            //   nm = inputNormal;
+            //}
          </script>
          <script type="text/glsl-shader" data-gl-type="fragment-shader">
             #version 300 es
             precision mediump float;
-
             out vec4 fragColor;
-
-            const vec3  greenColor = vec3(0.0,  1.0,  0.0);
-            in vec2 ld;
-            in vec3 nm;
-            void main()
+            const vec4 constColor = vec4 (0.0, 1.0, 0.0, 1.0);
+            in  vec3 normalVary;
+            uniform vec3 lightDirection;
+            void main(void)
             {
-               float prod   =  -dot ( normalize(vec3(ld, -1.0)),   normalize(nm));
-               fragColor    = vec4 (greenColor * prod,  1.0);
+               float prod = -dot (normalize(lightDirection),  normalize(normalVary) );
+               fragColor = vec4 (constColor.rgb * prod,  1.0);
             }
+
+            //#version 300 es
+            //precision mediump float;
+//
+            //out vec4 fragColor;
+//
+            //const vec3  greenColor = vec3(0.0,  1.0,  0.0);
+            //in vec2 ld;
+            //in vec3 nm;
+            //void main()
+            //{
+            //   float prod   =  -dot ( normalize(vec3(ld, -1.0)),   normalize(nm));
+            //   fragColor    = vec4 (greenColor * prod,  1.0);
+            //}
          </script>
       </canvas>
    </div>
