Consolidate static cone geometries Refactor rename to more suggestive names

--- a/draw.simple.1.glsl300.html
+++ b/draw.simple.1.glsl300.html
@@ -195,7 +195,7 @@
       Wrong but correct<br/>
       Four geonetries<br/>
       <canvas id = "cone" width = "200" height = "200"  class="yellow">
-         <script src="./draw.simple.1.glsl300/triangle_fan.js"></script>
+         <script src="./draw.simple.1.glsl300/triangleFan.js"></script>
          <script type="text/glsl-shader" data-gl-type="vertex-shader">
             #version 300 es
             layout (location = 0) in vec3 vertex;
@@ -228,7 +228,7 @@
       Tip normal set to 0,0,0<br/>
       Light change direction<br/>
       <canvas id = "cone1_animate" width = "200" height = "200"  class="yellow">
-         <script src="./draw.simple.1.glsl300/cone1_animate.js"></script>
+         <script src="./draw.simple.1.glsl300/cone1Animate.js"></script>
          <script  type="text/glsl-shader" data-gl-type="vertex-shader">
             #version 300 es
             layout (location = 0) in vec3 vertex;
@@ -244,8 +244,8 @@
             #version 300 es
             precision mediump float;
             out vec4 fragColor;
-            const vec4 constColor = vec4 (0.0, 1.0, 0.0, 1.0);
             in  vec3 normalVary;
+            const vec4 constColor = vec4 (0.0, 1.0, 0.0, 1.0);
             uniform vec3 lightDirection;
             void main(void)
             {
@@ -261,7 +261,7 @@
       Tip normal set to one side normal.<br/>
       Light change direction<br/>
       <canvas id = "cone1_animate" width = "200" height = "200"  class="yellow">
-         <script src="./draw.simple.1.glsl300/cone1_animate2.js"></script>
+         <script src="./draw.simple.1.glsl300/cone1Animate2.js"></script>
          <script  type="text/glsl-shader" data-gl-type="vertex-shader">
             #version 300 es
             layout (location = 0) in vec3 vertex;
@@ -272,47 +272,19 @@
                gl_Position = vec4(vertex, 1);
                normalVary = normal;
             }
-
-            //#version 300 es
-            //in vec4 coordinates;
-            //in vec3 inputNormal;
-            //uniform vec2  lightDirection; // Direction -> changing
-//
-            //out vec2 ld;
-            //out vec3 nm;
-            //void main()
-            //{
-            //   gl_Position = coordinates;
-            //   ld  = lightDirection;
-            //   nm = inputNormal;
-            //}
          </script>
          <script type="text/glsl-shader" data-gl-type="fragment-shader">
             #version 300 es
             precision mediump float;
             out vec4 fragColor;
-            const vec4 constColor = vec4 (0.0, 1.0, 0.0, 1.0);
             in  vec3 normalVary;
+            const vec4 constColor = vec4 (0.0, 1.0, 0.0, 1.0);
             uniform vec3 lightDirection;
             void main(void)
             {
                float prod = -dot (normalize(lightDirection),  normalize(normalVary) );
                fragColor = vec4 (constColor.rgb * prod,  1.0);
             }
-
-            //#version 300 es
-            //precision mediump float;
-//
-            //out vec4 fragColor;
-//
-            //const vec3  greenColor = vec3(0.0,  1.0,  0.0);
-            //in vec2 ld;
-            //in vec3 nm;
-            //void main()
-            //{
-            //   float prod   =  -dot ( normalize(vec3(ld, -1.0)),   normalize(nm));
-            //   fragColor    = vec4 (greenColor * prod,  1.0);
-            //}
          </script>
       </canvas>
    </div>
@@ -321,32 +293,29 @@
       Cone TRIANGLES (correct), </br>
       Normals simple <br/>
       <canvas id = "cone1" width = "200" height = "200"  class="yellow">
-         <script src="./draw.simple.1.glsl300/cone1.js"></script>
+         <script src="./draw.simple.1.glsl300/cone1Geometry1.js"></script>
          <script  type="text/glsl-shader" data-gl-type="vertex-shader">
             #version 300 es
-            in vec4 coordinates;
-            in vec3 inputNormal;
-
-            out vec3 nm;
-            void main()
+            layout (location = 0) in vec3 vertex;
+            layout (location = 1) in vec3 normal;
+            out vec3 normalVary;
+            void main(void)
             {
-               gl_Position = coordinates;
-               nm = inputNormal;
+               gl_Position = vec4(vertex, 1);
+               normalVary = normal;
             }
          </script>
          <script type="text/glsl-shader" data-gl-type="fragment-shader">
             #version 300 es
             precision mediump float;
-
             out vec4 fragColor;
-            const vec3  lightDirection = normalize(vec3(-1.0,  -1.0,  -1.0)); // Direction -> right up forward
-            const vec3  greenColor     = vec3( 0.0,   1.0,   0.0); // RGB of green
-
-            in vec3 nm;
-            void main() 
+            in  vec3 normalVary;
+            const vec4 constColor = vec4 (0.0, 1.0, 0.0, 1.0);
+            const vec3 constLightDirection = vec3(-1.0, -1.0, 1.0);
+            void main(void)
             {
-               float prod   =  -dot (lightDirection,   normalize(nm));
-               fragColor = vec4 (greenColor * prod,  1.0);
+               float prod = -dot (normalize(constLightDirection),  normalize(normalVary) );
+               fragColor = vec4 (constColor.rgb * prod,  1.0);
             }
          </script>
       </canvas>
@@ -356,34 +325,54 @@
       Cone TRIANGLES (correct), </br>
       Geometry <br/>
       <canvas id = "cone1_geometry" width = "200" height = "200"  class="yellow">
-         <script src="./draw.simple.1.glsl300/cone1_geometry.js"></script>
+         <script src="./draw.simple.1.glsl300/cone1Geometry2.js"></script>
          <script  type="text/glsl-shader" data-gl-type="vertex-shader">
             #version 300 es
-            in vec4 coordinates;
-            in vec3 inputNormal;
-            out vec3 nm;
-            void main()
+            layout (location = 0) in vec3 vertex;
+            layout (location = 1) in vec3 normal;
+            out vec3 normalVary;
+            void main(void)
             {
-               gl_Position = coordinates;
-               nm = inputNormal;
+               gl_Position = vec4(vertex, 1);
+               normalVary = normal;
             }
+            //#version 300 es
+            //in vec4 coordinates;
+            //in vec3 inputNormal;
+            //out vec3 nm;
+            //void main()
+            //{
+            //   gl_Position = coordinates;
+            //   nm = inputNormal;
+            //}
          </script>
          <script type="text/glsl-shader" data-gl-type="fragment-shader">
             #version 300 es
             precision mediump float;
-
             out vec4 fragColor;
-
-            const vec3  lightDirection = vec3(-1.0,  -1.0,  -1.0); // Direction -> right up forward
-            const vec3  greenColor     = vec3( 0.0,   1.0,   0.0); // RGB of green
-
-            in vec3 nm;
-            void main() 
+            const vec4 constColor = vec4 (0.0, 1.0, 0.0, 1.0);
+            in  vec3 normalVary;
+            const vec3 constLightDirection = vec3(-1.0, -1.0, 1.0);
+            void main(void)
             {
-               //find the cos of angle between plane normal and light direction
-               float prod   =  dot (-1.0 * normalize(lightDirection),   normalize(nm));
-               fragColor = vec4 (greenColor * prod,  1.0);
+               float prod = -dot (normalize(constLightDirection),  normalize(normalVary) );
+               fragColor = vec4 (constColor.rgb * prod,  1.0);
             }
+            //#version 300 es
+            //precision mediump float;
+//
+            //out vec4 fragColor;
+//
+            //const vec3  lightDirection = vec3(-1.0,  -1.0,  -1.0); // Direction -> right up forward
+            //const vec3  greenColor     = vec3( 0.0,   1.0,   0.0); // RGB of green
+//
+            //in vec3 nm;
+            //void main() 
+            //{
+            //   //find the cos of angle between plane normal and light direction
+            //   float prod   =  dot (-1.0 * normalize(lightDirection),   normalize(nm));
+            //   fragColor = vec4 (greenColor * prod,  1.0);
+            //}
          </script>
       </canvas>
    </div><br/>
