--- a/draw.simple.1.glsl300.vao.auto.html
+++ b/draw.simple.1.glsl300.vao.auto.html
@@ -33,7 +33,7 @@
       Cone TRIANGLE_FAN<br/>
       (wrong but correct)</br>
       <canvas id = "cone" width = "200" height = "200"  class="yellow">
-         <script src="./draw.simple.1.glsl300.vao.auto/triangle_fan.js"></script>
+         <script src="./draw.simple.1.glsl300.vao.auto/triangleFan.js"></script>
       </canvas>
    </div>
    <div class="sample">
@@ -42,7 +42,7 @@
       Light change direction<br/>
       to merge</b><br/>
       <canvas id = "cone1_animate" width = "200" height = "200"  class="yellow">
-         <script src="./draw.simple.1.glsl300.vao.auto/cone1_animate.js"></script>
+         <script src="./draw.simple.1.glsl300.vao.auto/cone1Animate.js"></script>
       </canvas>
    </div>
    <div class="sample">
@@ -52,14 +52,14 @@
       Light change direction<br/>
       to be merged</b><br/>
       <canvas id = "cone1_animate" width = "200" height = "200"  class="yellow">
-         <script src="./draw.simple.1.glsl300.vao.auto/cone1_animate2.js"></script>
+         <script src="./draw.simple.1.glsl300.vao.auto/cone1Animate2.js"></script>
       </canvas>
    </div>
    <div class="sample">
       Cone TRIANGLES (correct), </br>
       Normals simple <br/>
       <canvas id = "cone1" width = "200" height = "200"  class="yellow">
-         <script src="./draw.simple.1.glsl300.vao.auto/cone1.js"></script>
+         <script src="./draw.simple.1.glsl300.vao.auto/cone1Geometry1.js"></script>
       </canvas>
    </div>
    <div class="sample">
@@ -68,7 +68,7 @@
       Very good investigation<br/>
       to be merged</b><br/>
       <canvas id = "cone1_geometry" width = "200" height = "200"  class="yellow">
-         <script src="./draw.simple.1.glsl300.vao.auto/cone1_geometry.js"></script>
+         <script src="./draw.simple.1.glsl300.vao.auto/cone1Geometry2.js"></script>
       </canvas>
    </div><br/>
    <div class="sample">
