Finish consolidation draw.simple.1.glsl300 Finish rename refactoring draw.simple.1.glsl300, draw.simple.1.glsl300.auto

--- a/draw.simple.1.glsl300.html
+++ b/draw.simple.1.glsl300.html
@@ -6,8 +6,9 @@
    <script src="./lib/js/math/3dmath.js"></script>
 </head>
 <body>
-   The WebGL migrated to <a href="./webgpu1.html">WebGPU</a><br/>
-   The WebGL migrated to <a href="./draw.simple.1.glsl300.vao.html">WebGL with VAO</a><br/>
+   This WebGL: all cones fully consolidated<br/>
+   This WebGL migrated to <a href="./webgpu1.html">WebGPU (fully consolidated)</a><br/>
+   This WebGL with VAO: <a href="./draw.simple.1.glsl300.vao.html">WebGL with VAO (not consolidated)</a><br/>
    <div class="sample">
       WebGL Very Simple<br/>
       Color background<br/>
