--- a/draw.simple.1.glsl300.vao.auto.html
+++ b/draw.simple.1.glsl300.vao.auto.html
@@ -7,6 +7,7 @@
    <script src="./lib/js/gl2js/gldynamic.js"></script>
 </head>
 <body>
+   DynamiTD<br/>
    Automatic Dynamic GLSL 300 Shader Handling. Migrated from  <a href="./draw.simple.1.glsl300.vao.html">WebGL2 GLSL 300</a><br/>
    Older version available here <a href="./draw.simple.1.glsl300.html">WebGL</a><br/>
    A WebGPU variant <a href="./webgpu1.html">available</a><br/>
