--- a/webgpu1.html
+++ b/webgpu1.html
@@ -39,8 +39,8 @@ context      = canvas.getContext('webgpu');
 //      +   ends with device.queue.submit([commandEncoder.finish()]); //end device
 /////   end while (draw)
    </pre>
-   This WebGPU sample migrated from <a href="./draw.simple.1.glsl300.html">this WebGL</a><br/>
-   Same WebGL <a href="./draw.simple.1.glsl300.html">using VAO</a><br/>
+   This WebGPU sample migrated from <a href="./draw.simple.1.glsl300.html">this WebGL (cones fully consolidated)</a><br/>
+   Same WebGL <a href="./draw.simple.1.glsl300.vao.html">With VAO (not consolidated)</a><br/>
    <div class="sample">
       WebGPU very simple<br/>
       Color background<br/>
