--- a/webgpu1.html
+++ b/webgpu1.html
@@ -313,10 +313,9 @@ context      = canvas.getContext('webgpu');
       </canvas>
    </div><br/>
    <div class="sample">
-      To Be Reviewed<br/>
-      WebGPU Inverted(?)<br/>
+      WebGPU (ok with inversion)<br/>
       Cone TRIANGLE_FAN<br/>
-      (wrong, ab glow effect)</br>
+      (wrong but correct, glow effect)</br>
       <canvas id = "cone" width = "200" height = "200"  class="yellow">
          <script src="./webgpu1/triangleFan.js"></script>
          <script type="text/wgsl-shader" data-gpu-type="webgpu-shader">
@@ -345,10 +344,9 @@ context      = canvas.getContext('webgpu');
       </canvas>
    </div>
    <div class="sample">
-      To Be Reviewed<br/>
-      WebGPU Inverted(?)<br/>
+      WebGPU (ok with inversion)<br/>
       Cone TRIANGLE_FAN 2<br/>
-      (wrong, ab glow effect)</br>
+      (wrong bur correct, glow effect)</br>
       <canvas id = "cone" width = "200" height = "200"  class="yellow">
          <script src="./webgpu1/triangleFan2.js"></script>
          <script type="text/wgsl-shader" data-gpu-type="webgpu-shader">
