--- a/webgpu1.html
+++ b/webgpu1.html
@@ -52,14 +52,14 @@ context      = canvas.getContext('webgpu');
       WebGPU triangle 1:<br/>
       Strided<br/>
       <canvas width="160" height="120">
-         <script src="./webgpu1/basic.js" defer=""></script>
+         <script src="./webgpu1/basicTriangleStrided.js" defer=""></script>
       </canvas>
    </div>
    <div class="sample">
       WebGPU triangle:<br/>
       Multiple Buffers<br/>
       <canvas width="160" height="120">
-         <script src="./webgpu1/multipleBuffers.js" defer=""></script>
+         <script src="./webgpu1/basicTriangleMultipleBuffers.js" defer=""></script>
       </canvas>
    </div><br/>
    <div class="sample">
@@ -68,7 +68,7 @@ context      = canvas.getContext('webgpu');
       Try Classes:<br/>
       html/script shaders<br/>
       <canvas width="160" height="120">
-        <script src="./webgpu1/tryClasses.js" defer=""></script>
+        <script src="./webgpu1/basicTwoTrianglesPerspectie_TryClasses.js" defer=""></script>
         <script type="text/wgsl-shader" data-gpu-type="webgpu-shader">
             struct VertexOut
             {
@@ -97,7 +97,7 @@ context      = canvas.getContext('webgpu');
       Try Classes2:<br/>
       html/script shaders<br/>
       <canvas width="160" height="120">
-        <script src="./webgpu1/tryClasses2.js" defer=""></script>
+        <script src="./webgpu1/basicTwoTrianglesPerspectie2_TryClasses..js" defer=""></script>
         <script type="text/wgsl-shader" data-gpu-type="webgpu-shader">
             struct VertexOut
             {
