--- a/webgpu1.html
+++ b/webgpu1.html
@@ -50,16 +50,16 @@ context      = canvas.getContext('webgpu');
    </div>
    <div class="sample">
       WebGPU triangle 1:<br/>
-      Strided<br/>
+      Strided Buffers<br/>
       <canvas width="160" height="120">
-         <script src="./webgpu1/basicTriangleStrided.js" defer=""></script>
+         <script src="./webgpu1/basicTriangleStridedBuffers.js" defer=""></script>
       </canvas>
    </div>
    <div class="sample">
       WebGPU triangle:<br/>
-      Multiple Buffers<br/>
+      Separated Buffers<br/>
       <canvas width="160" height="120">
-         <script src="./webgpu1/basicTriangleMultipleBuffers.js" defer=""></script>
+         <script src="./webgpu1/basicTriangleSeparatedBuffers.js" defer=""></script>
       </canvas>
    </div><br/>
    <div class="sample">
@@ -177,11 +177,12 @@ context      = canvas.getContext('webgpu');
             {
                @builtin(position) position : vec4f,
             }
+            const translation = vec4f(0.5, 0.5, 0.0, 0.0);
             @vertex
             fn vertex_main(@location(0) position: vec4f) -> VertexOut
             {
                var ret : VertexOut;
-               ret.position = position + vec4f(0.5, 0.5, 0.0, 0.0); //hardcoded translation
+               ret.position = position + translation; //hardcoded translation
                return ret;
             }
             @fragment
@@ -274,7 +275,7 @@ context      = canvas.getContext('webgpu');
                ret.normal   = normal;
                return ret;
             }
-            const lightDirection = normalize (vec3(-1.0,  -1.0, -1.0)); // Direction -> to left down forward
+            const lightDirection = normalize (vec3(-1.0,  -1.0,  1.0)); // Direction -> to left down forward
             const greenColor     = vec3      (0.0,  1.0,  0.0);         // RGB of green
             @fragment
             fn fragment_main(fragData: VertexOut) -> @location(0) vec4f
