--- a/webgpu1.html
+++ b/webgpu1.html
@@ -258,7 +258,7 @@ context      = canvas.getContext('webgpu');
    </div>
    <div class="sample">
       WebGPU Normals:<br/>
-      Multiple Buffers<br/>
+      Separated Buffers<br/>
       <canvas id = "normals" width = "120" height = "120"  class="yellow">
          <script src="./webgpu1/normals.js"></script>
          <script type="text/wgsl-shader" data-gpu-type="webgpu-shader">
@@ -288,7 +288,7 @@ context      = canvas.getContext('webgpu');
    </div>
    <div class="sample">
       WebGPU: Colors R+G:<br/>
-      Strided<br/>
+      Strided Buffers<br/>
       <canvas id="usecolors" width="120" height="120"  class="yellow">
           <script src="./webgpu1/usecolors.js"></script>
           <script type="text/wgsl-shader" data-gpu-type="webgpu-shader">
