--- a/webgpu1.html
+++ b/webgpu1.html
@@ -316,6 +316,7 @@ context      = canvas.getContext('webgpu');
    <div class="sample">
       WebGPU (ok with inversion)<br/>
       Cone TRIANGLE_FAN<br/>
+      Perspective direct lefthanded<br/>
       (wrong but correct, glow effect)</br>
       <canvas id = "cone" width = "200" height = "200"  class="yellow">
          <script src="./webgpu1/triangleFan.js"></script>
@@ -347,6 +348,7 @@ context      = canvas.getContext('webgpu');
    <div class="sample">
       WebGPU (ok with inversion)<br/>
       Cone TRIANGLE_FAN 2<br/>
+      Perspective inverse righthanded<br/>
       (wrong bur correct, glow effect)</br>
       <canvas id = "cone" width = "200" height = "200"  class="yellow">
          <script src="./webgpu1/triangleFan2.js"></script>
