Code cissellation, remove main name from new modules

--- a/webgpu1.html
+++ b/webgpu1.html
@@ -97,7 +97,7 @@ context      = canvas.getContext('webgpu');
       Try Classes2:<br/>
       html/script shaders<br/>
       <canvas width="160" height="120">
-        <script src="./webgpu1/basicTwoTrianglesPerspectie2_TryClasses..js" defer=""></script>
+        <script src="./webgpu1/basicTwoTrianglesPerspectie2_TryClasses.js" defer=""></script>
         <script type="text/wgsl-shader" data-gpu-type="webgpu-shader">
             struct VertexOut
             {
